# api-price-cryptocurrencies

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  api-deployment.yaml  api-service.yaml  docker-compose.yaml  readme.md
.github/workflows/: docker-image.yml  docker.yml  rust.yml  shiftleft-analysis.yml
src/: controllers.rs  main.rs  services.rs
src/domains/: mod.rs  ticker.rs
src/helpers/: load_env.rs
src/infrastructure/: client.rs
