[package]
name = "price-cryptocurrencies"
version = "0.1.0"
authors = ["Gabriel Souza <gabrielsouza849@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger="0.8.3"
dotenv = "0.15.0"
async-trait = "0.1.48"
serde = { version = "1.0", features = ["derive"] }
actix-web =  { version="3.3.x", features=["rustls", "default"] }
futures = { version = "0.3", default-features = false }
reqwest = {version="0.10.10", features=["json", "rustls-tls"], default-features = false }
